--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a:not([class]) {
 img,
 picture {
   max-width: 100%;
-  display: block;
+  display: block;   
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -85,31 +85,22 @@ textarea, select {
   font-size: inherit;
 }
 
-/* Make sure textareas without a rows attribute are not tiny */
-textarea:not([rows]) {
-  min-height: 10em;
-}
-
-/* Anything that has been anchored to should have extra scroll margin */
-:target {
-  scroll-margin-block: 5ex;
-}
-
 body {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   margin: 0;
-  height: 100vh;
+  height: 100%;
+  padding: 0;
   font-family: 'Rubik';
   background-color: var(--very-dark-blue);
 }
 .cards-grid {
   display: grid;
-  gap:2rem;
+  gap:1.5rem;
   grid-template-columns: repeat(4, 1fr);
-  padding: 40px;
+  padding: 1.5rem;
   min-width: 62em;
 }
 
@@ -139,7 +130,6 @@ h1 {
 
 .card > div >img {
   width: 35%;
-  /* justify-items: end; */
   height: auto;
   display: flex;
   background-size: contain;
@@ -168,6 +158,22 @@ section {
   height: 100px;
   z-index: -1;
 }
+
+.metrics > small, 
+.time-frame {
+  color: var(--pale-blue);
+}
+
+.time-frame p:hover, .card img  {
+  color: white;
+  transition: ease-in 0.2s;
+  cursor: pointer;
+}
+
+.time-frame p:focus {
+  color: white;
+}
+
 
 .work-underlay {
   background-color: var(--light-red-work);
@@ -207,7 +213,16 @@ section {
   flex-direction: column;
   justify-content: end;
   align-items: start;
-  padding-left: 2rem;
+  background: var(--dark-blue); 
+  border-radius: 10px;
+  padding: 20px;
+  position: relative;
+  color: white;
+  margin-top: 2rem;
+
+  .time-frame {
+    padding-left: 1rem;
+  }
 }
 
 .profile-undercard p {
@@ -215,7 +230,10 @@ section {
 }
 
 .profile-img {
-  margin: 2rem 2rem 0 2rem;
+    border: 3px solid white;
+    border-radius: 50%;
+    margin-top: 1.5rem;
+    margin-left: 1.5rem;
 }
 
 .card-header {
@@ -223,4 +241,46 @@ section {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+  
+  .cards-grid {
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   min-width: 100%;
+   height: auto;
+  }
+
+  .profile-undercard {
+    display: block;
+    background: var(--dark-blue); 
+    height: 11.5rem;
+    color: white;
+    border-radius: var(--radius);
+    margin-top: 2rem;
+
+    .time-frame {
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: end;
+    }
+  }
+  .profile-overlay {
+    background-color: var(--violet-social);
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-self: center;
+    height: auto;
+    border-radius: var(--radius);
+  }
+
+  .metrics {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
