--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
   --radius: 1rem;
 }
 
-
 /* Box sizing rules */
 *,
 *::before,
@@ -36,14 +35,22 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin-block-end: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -54,14 +61,21 @@ body {
 }
 
 /* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
   line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   text-wrap: balance;
 }
 
@@ -75,12 +89,14 @@ a:not([class]) {
 img,
 picture {
   max-width: 100%;
-  display: block;   
+  display: block;
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
+input,
+button,
+textarea,
+select {
   font-family: inherit;
   font-size: inherit;
 }
@@ -93,7 +109,7 @@ body {
   margin: 0;
   height: 100%;
   padding: 0;
-  font-family: 'Rubik';
+  font-family: "Rubik";
   background-color: var(--very-dark-blue);
 }
 
@@ -103,7 +119,7 @@ h2 {
 }
 .cards-grid {
   display: grid;
-  gap:1.5rem;
+  gap: 1.5rem;
   grid-template-columns: repeat(4, 1fr);
   padding: 1.5rem;
   min-width: 62em;
@@ -133,7 +149,7 @@ h1 {
   }
 }
 
-.card > div >img {
+.card > div > img {
   width: 65px;
   height: auto;
   display: flex;
@@ -149,10 +165,6 @@ h1 {
 .hours {
   font-size: 2.5rem;
 }
-section {
-  position: relative;
-  background-color: aqua;
-}
 
 .category-underlay {
   border-radius: var(--radius);
@@ -164,12 +176,13 @@ section {
   z-index: -1;
 }
 
-.metrics > small, 
+.metrics > small,
 .time-frame {
   color: var(--pale-blue);
 }
 
-.time-frame p:hover, .card img  {
+.time-frame p:hover,
+.card img {
   color: white;
   transition: ease-in 0.2s;
   cursor: pointer;
@@ -179,11 +192,10 @@ section {
   color: white;
 }
 
-
 .work-underlay {
   background-color: var(--light-red-work);
 }
-.play-underlay{
+.play-underlay {
   background-color: var(--soft-blue-play);
 }
 
@@ -204,7 +216,7 @@ section {
 }
 
 .profile-overlay {
-  background-color: var(--violet-social);
+  background-color: var(--blue);
   width: 100%;
   position: absolute;
   left: 0;
@@ -218,7 +230,7 @@ section {
   flex-direction: column;
   justify-content: end;
   align-items: start;
-  background: var(--dark-blue); 
+  background: var(--dark-blue);
   border-radius: 10px;
   padding: 20px;
   position: relative;
@@ -231,14 +243,14 @@ section {
 }
 
 .profile-undercard p {
-  padding-block: 0.4rem
+  padding-block: 0.4rem;
 }
 
 .profile-img {
-    border: 3px solid white;
-    border-radius: 50%;
-    margin-top: 1.5rem;
-    margin-left: 1.5rem;
+  border: 3px solid white;
+  border-radius: 50%;
+  margin-top: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .card-header {
@@ -249,18 +261,17 @@ section {
 }
 
 @media only screen and (max-width: 600px) {
-  
   .cards-grid {
-   display: flex;
-   justify-content: center;
-   flex-direction: column;
-   min-width: 100%;
-   height: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-width: 100%;
+    height: auto;
   }
 
   .profile-undercard {
     display: block;
-    background: var(--dark-blue); 
+    background: var(--dark-blue);
     height: 11.5rem;
     color: white;
     border-radius: var(--radius);
